--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: OWASP Cloud Security Blog
 
 # Short bio or description (displayed in the header)
-description: OWASP Cloud Security Blog
+description: Anncouncements and info for the OWASP Cloud Security Project
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://www.owasp.org/images/d/df/Owasp_logo_rev_icon.jpg
@@ -21,7 +21,7 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: https://github.com/owasp-cloud-security/owasp-cloud-security
+  github: owasp-cloud-security/owasp-cloud-security
   instagram:
   linkedin:
   pinterest:
